# regit-svi

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  MATH.md  NOTICE  README.md  SECURITY.md  deny.toml  justfile  rust-toolchain.toml
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
benches/: svi.rs
examples/: quickstart.rs
src/: arbitrage.rs  convert.rs  density.rs  errors.rs  jw.rs  lib.rs  math.rs  raw.rs  ssvi.rs  surface.rs  types.rs
src/calibration/: least_squares.rs  mod.rs  quasi_explicit.rs  ssvi.rs
tests/: integration.rs
